Fix main content overflow

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -257,6 +257,7 @@ textarea {
 //
 .wrapper {
   max-width: 48rem;
+  width: 100%;
   margin: auto;
   display: flex;
   flex-direction: column;
